assets/css/styles.css
* {
    box-sizing: border-box;
}

:root {
    --primary-color: #0f1b4c;
    --bg-header: #e6f0ff;
    --width-content: 1110px;
    --spacer-content: 48px;
    --link-color: #0689ff;
}

html {
    font-size: 62.5%;
}

body {
    font-size: 1.6rem;
    font-family: Poppins, sans-serif;
}

/* Common */

.line-clamp {
    display: -webkit-box;
    -webkit-line-clamp: var(--line-clamp, 2);
    -webkit-box-orient: vertical;
    overflow: hidden;
}

.content {
    width: var(--width-content);
    max-width: calc(100% - var(--spacer-content));
    margin-right: auto;
    margin-left: auto;
}

a {
    text-decoration: none;
}

.btn {
    display: inline-block;
    min-width: 98px;
    background: var(--primary-color);
    border-radius: 12px;
    font-weight: 500;
    font-size: 14px;
    text-align: center;
    color: #ffffff;
    padding: 18px 16px;
}

.btn:hover {
    opacity: 0.8;
}

.btn.normal {
    padding: 13px 16px;
    border-radius: 8px;
}

/* Header */

.header {
    position: relative;
    height: 100vh;
    background-color: var(--bg-header);
}

.navbar {
    display: flex;
    align-items: center;
    padding-top: 38px;
}

.navbar ul {
    display: flex;
    margin-left: 50px;
}

.navbar ul a:hover {
    text-decoration: underline;
}

.navbar .actions {
    display: flex;
    align-items: center;
}

.actions {
    margin-left: auto;
}

.navbar ul a {
    display: block;
    padding: 8px 14px;
    font-weight: 500;
    font-size: 1.4rem;
    line-height: 21px;
    color: #4f5361;
}

.navbar .action-link {
    font-weight: 500;
    font-size: 1.4rem;
    line-height: 21px;
    margin-right: 18px;
    color: var(--primary-color);
}

/* ================ Header hero ================*/

.hero {
    margin-top: 130px;
}

.hero .info {
    width: 50%;
}

.hero .sub-title {
    font-weight: 500;
    font-size: 1.8rem;
    line-height: 1.5;
    letter-spacing: 0.01em;
    color: #687690;
}

.hero .title {
    font-weight: 700;
    font-size: 6.2rem;
    line-height: 1.19;
    color: #000336;
    margin-top: 8px;
}

.hero .description {
    margin-top: 30px;
    font-weight: 400;
    font-size: 1.8rem;
    line-height: 1.78;
    color: #5a6473;
}

.hero-cta {
    min-width: 170px;
    margin-top: 40px;
}

.hero .hero-img {
    position: absolute;
    bottom: 0;
    right: calc((100vw - var(--width-content)) / 2 - 100px);
    width: 550px;
}

/* ================ clients ================*/

.clients {
    margin-top: 79px;
    padding: 43px 0 41px;
}

.clients .row {
    display: flex;
    justify-content: space-between;
}

.clients .row .desc {
    font-weight: 500;
    font-size: 1.6rem;
    line-height: 1.25;
    color: #7d8589;
}

.clients .row-desc {
    margin-top: 23px;
}

.clients .images {
    margin-top: 70px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.clients .images .active {
    background: #ffffff;
    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
    border-radius: 12px;
    padding: 20px;
}

/* ================ Guides ================*/

.guides {
    margin-top: 40px;
    padding: 93px 0 79px;
}

.guides .sub-title {
    --title-color: #000339;
    position: relative;
    font-weight: 600;
    font-size: 3.5rem;
    line-height: 1;
    text-align: center;
    color: var(--title-color);
}

.guides .sub-title::after {
    content: "";
    display: inline-block;
    position: absolute;
    width: 41px;
    height: 4px;
    background: currentColor;
    border-radius: 12px;
    top: -10px;
    left: 50%;
    transform: translateX(-50%);
}

.guides .desc {
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 1.88;
    text-align: center;
    color: #5a6473;
    width: 459px;
    max-width: 100%;
    margin: 20px auto;
}

.guides .list-guide {
    display: flex;
    list-style: none;
    margin-top: 62px;
    justify-content: center;
}

.guides .list-guide .guide-item {
    text-align: center;
    margin: 0 70px;
}

.guide-item .title {
    font-weight: 500;
    font-size: 2rem;
    line-height: 1.1;
    text-align: center;
    color: #3b3c45;
    margin-top: 26px;
}

.guide-item .link {
    font-weight: 600;
    font-size: 1.4rem;
    line-height: 1.5;
    text-align: center;
    color: var(--link-color);
    display: inline-block;
    margin-top: 10px;
}

.guide-item .link img {
    display: inline-block;
    margin-left: 8px;
}

.guide-cta {
    margin-top: 64px;
    display: flex;
}

.guide-cta .btn-guideline {
    margin: auto;
    min-width: 170px;
}

/* ================ Featured ================*/

.featured {
    margin-top: 41px;
    background: #f5fafe;
    padding: 110px 0;
}

.featured .sub-title {
    font-weight: 600;
    font-size: 3.5rem;
    color: #000339;
    margin-bottom: 15px;
}

.featured .row {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.featured .desc {
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 1.88;
    color: #5a6473;
}

.featured .link {
    display: flex;
    align-items: center;
    font-weight: 600;
    font-size: 1.8rem;
    color: var(--link-color);
}

.featured .link .arrow {
    margin-left: 8px;
}

.featured .list {
    display: flex;
    gap: 30px;
    flex-wrap: wrap;
    margin-top: 68px;
}

.featured .item {
    --radius: 12px;
    flex: 1;
    display: block;
    text-decoration: none;
    background-color: #fff;
    box-shadow: 0px 65px 80px -46px rgba(226, 238, 249, 0.6);
    border-radius: var(--radius);
}

.featured .item .thumb {
    width: 100%;
    height: 227px;
    object-fit: cover;
    object-position: center;
    border-top-left-radius: var(--radius);
    border-top-right-radius: var(--radius);
}

.featured .item .body {
    padding: 17px 20px 24px;
}

.featured .item .title {
    font-weight: 600;
    font-size: 2rem;
    color: #000339;
}

.featured .item .desc {
    --line-clamp: 3;
    margin-top: 12px;
    font-weight: 500;
    font-size: 1.4rem;
    line-height: 1.5;
    color: #a3a6ab;
    word-break: break-all;
}

.featured .info-list {
    margin-top: 20px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.featured .info-item {
    display: flex;
    align-items: center;
}

.featured .info-item span {
    margin-left: 8px;
    font-weight: 500;
    font-size: 1.4rem;
    color: #444444;
}

/* ================ Stats ================*/

.stats {
    margin-top: 75px;
    padding: 50px 0;
}

.stats .content {
    width: 1018px;
}

.stats .row {
    display: flex;
}

.stats .img-block {
    position: relative;
}

.stats .img-block,
.stats .info {
    width: 50%;
}

.stats .img-block > .thumb {
    display: block;
    width: 400px;
    height: 460px;
    margin-left: auto;
    object-fit: cover;
    object-position: center;
    border-radius: 12px;
}

.stats .info {
    padding: 79px 0 0 165px;
}

.stats .info .title {
    position: relative;
    width: 269px;
    font-weight: 600;
    font-size: 3.5rem;
    line-height: 1.29;
    color: #000339;
}

.stats .info .title::before {
    content: "";
    position: absolute;
    width: 41px;
    height: 4px;
    top: -10px;
    left: 0;
    background: #000339;
    border-radius: 12px;
}

.stats .info .desc {
    width: 309px;
    margin-top: 20px;
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 1.88;
    color: #5a6473;
}

.stats-trend {
    width: 239px;
    position: absolute;
    top: 0;
    left: 0;
    background-color: #fff;
    box-shadow: 90px 85px 100px rgba(0, 0, 0, 0.06);
    border-radius: 0px 0px 12px 12px;
    padding: 45px 22px 22px;
}

.stats-trend .value {
    font-weight: 700;
    font-size: 2.6rem;
    letter-spacing: 0.01em;
    color: #000339;
}

.stats-trend .trend-icon {
    margin-left: auto;
}

.stats-trend .desc {
    margin-top: 8px;
    font-weight: 400;
    font-size: 1.2rem;
    line-height: 1.5;
    color: #a7a7a7;
}

.stats-trend .divided {
    margin-top: 25px;
    height: 1.2px;
    background: #e9e9e9;
}

.stats .user-block {
    margin-top: 25px;
    display: flex;
    flex-wrap: wrap;
    gap: 16px 14px;
}

.user-block .user-group {
    display: flex;
}

.user-block .user-group .user {
    width: 16px;
    height: 16px;
    border-radius: 50%;
    object-fit: cover;
    object-position: center;
    margin-left: -3px;
    box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.1);
    background-color: var(--bg-color, #1f3bb1);
    font-weight: 450;
    font-size: 0.7rem;
    color: #ffffff;
    text-align: center;
    line-height: 16px;
    letter-spacing: -0.02em;
}

.user-block .user-group .user:first-child {
    margin-left: 0;
}

.stats .digital-data {
    margin-top: 110px;
    padding: 0 32px;
    justify-content: space-between;
}

.stats .qty-number {
    font-weight: 600;
    font-size: 6.4rem;
    color: #000000;
}

.stats .qty-desc {
    margin-top: 22px;
    font-weight: 500;
    font-size: 1.8rem;
    line-height: 1.5;
    color: #7b8087;
}

/* Subscription section */

.subscription {
    margin-top: 90px;
}

.subscription .body {
    position: relative;
    display: flex;
    align-items: center;
    height: 370px;
    background: #063183;
    border-radius: 20px;
}

.subscription .info {
    width: 670px;
    max-width: 100%;
    padding: 0 80px;
}

.subscription .title {
    --line-clamp: 2;
    font-weight: 600;
    font-size: 3.5rem;
    line-height: 1;
    color: #ffffff;
}

.subscription .desc {
    --line-clamp: 3;
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 1.88;
    color: #ffffff;
    opacity: 0.75;
    margin-top: 15px;
}

.subscription .subscribe-btn {
    margin-top: 20px;
    background: #ffffff;
    border-radius: 12px;
    color: #002366;
    font-size: 1.3rem;
    min-width: 150px;
}

.subscription .image {
    position: absolute;
    bottom: 0;
    right: 221px;
}

/* Footer section */

.footer {
    margin-top: 55px;
    padding: 50px 0 58px;
}
.footer .row {
    display: flex;
}

.footer .col {
    flex: 1;
    margin-left: 10px;
}

.footer .col:first-child {
    margin-left: 0;
}

.footer .heading {
    font-weight: 600;
    font-size: 2rem;
    line-height: 1.2;
    color: #1c1c1d;
    margin-bottom: 40px;
}

.footer .list {
    list-style: none;
}

.footer .list .item {
    margin-top: 18px;
}

.footer .list .item:first-child {
    margin-top: 0;
}

.footer .list .item a,
.footer .desc {
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 1.5;
    color: #7a7a7e;
}

.footer .socials {
    margin-top: 40px;
    display: flex;
}

.footer .socials .social-link {
    display: flex;
    width: 28px;
    height: 28px;
    border-radius: 4px;
    background: #f9f9f9;
    text-align: center;
}

.footer .socials .social-link img {
    margin: auto;
}

.footer .socials .social-link + .social-link {
    margin-left: 16px;
}

.footer .row-end {
    justify-content: space-between;
    margin-top: 81px;
}

.footer .row-end .copyright {
    font-weight: 400;
    font-size: 1.4rem;
    line-height: 1.5;
    color: #c2c2c2;
}

